<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cv"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    android:backgroundTint="@color/ambar_bajo"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_eliminar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/btn_save_delete"
            android:src="@drawable/ic_delete"
            android:contentDescription="@string/icono_guardar_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints,TouchTargetSizeCheck"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvnombrerutina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cv_nombre"
            android:layout_marginTop="10dp"
            android:typeface="monospace"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="15sp"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/et_trabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cv_trabajo"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/et_descanso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvnombrerutina"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/et_descanso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textAlignment="center"
            android:text="@string/cv_descanso"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/tvnombrerutina"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/et_trabajo"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/iv_work"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="@+id/et_trabajo"
            app:layout_constraintEnd_toEndOf="@+id/et_trabajo"
            app:layout_constraintTop_toBottomOf="@+id/et_trabajo"
            app:srcCompat="@drawable/ic_work"
            app:tint="@color/black" />

        <ImageView
            android:id="@+id/iv_break"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="@+id/et_descanso"
            app:layout_constraintTop_toBottomOf="@+id/et_descanso"
            app:layout_constraintStart_toStartOf="@+id/et_descanso"
            app:srcCompat="@drawable/ic_break"
            app:tint="@color/black" />

        <TextView
            android:id="@+id/tvtiempotrabajo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cv_trabajo"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/et_trabajo"
            app:layout_constraintEnd_toEndOf="@+id/et_trabajo"
            app:layout_constraintTop_toBottomOf="@+id/iv_work"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvtiempodescanso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/cv_trabajo"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@+id/et_descanso"
            app:layout_constraintEnd_toEndOf="@+id/et_descanso"
            app:layout_constraintTop_toBottomOf="@+id/iv_break"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/tvtotalsesiones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="@string/cv_sesiones"
            android:textAlignment="center"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvtiempotrabajo"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="MissingConstraints" />




    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>